2. Local-Variable Type Inference [#389495]