@@ -16,29 +16,29 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expected = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expected = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expected));
     }
 
     @Test
     public void whenCorrect() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void ascSorting() {
-        List<String> input = Arrays.asList("k2/sk3/ssk1", "k2", "k1", "k2/sk1", "k1/sk1/ssk1");
+        List<String> input = List.of("k2/sk3/ssk1", "k2", "k1", "k2/sk1", "k1/sk1/ssk1");
         Departments.sortAsc(Departments.fillGaps(input));
     }
 
     @Test
     public void descSorting() {
-        List<String> input = Arrays.asList("k2/sk3/ssk1", "k2", "k1", "k2/sk1", "k1/sk1/ssk1");
+        List<String> input = List.of("k2/sk3/ssk1", "k2", "k1", "k2/sk1", "k1/sk1/ssk1");
         Departments.sortDesc(Departments.fillGaps(input));
     }
 
