@@ -12,11 +12,11 @@ import static org.junit.Assert.*;
 public class FullSearchTest {
     @Test
     public void extractNumber() {
-        List<Task> initialList = Arrays.asList(
+        List<Task> initialList = List.of(
                 new Task("1", "One"),
                 new Task("2", "Two"),
                 new Task("1", "False"));
-        HashSet<String> expected = new HashSet<>(Arrays.asList("1", "2"));
+        HashSet<String> expected = new HashSet<>(List.of("1", "2"));
         assertThat(expected, is(FullSearch.extractNumber(initialList)));
     }
 }
