@@ -14,11 +14,11 @@ public class NotifyAccountTest {
 
     @Test
     public void whenDifferent() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("1 10 1000", "John M.", "100"),
                 new Account("2 20 200", "John M.", "100")
         );
-        HashSet<Account> expected = new HashSet<>(Arrays.asList(
+        HashSet<Account> expected = new HashSet<>(List.of(
                 new Account("1 10 1000", "John M.", "100"),
                 new Account("2 20 200", "John M.", "100"))
         );
@@ -27,12 +27,12 @@ public class NotifyAccountTest {
 
     @Test
     public void whenDuplicate() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("1 10 1000", "John M.", "100"),
                 new Account("2 20 200", "John M.", "100"),
                 new Account("1 10 1000", "Bob D.", "100")
         );
-        HashSet<Account> expected = new HashSet<>(Arrays.asList(
+        HashSet<Account> expected = new HashSet<>(List.of(
                 new Account("1 10 1000", "John M.", "100"),
                 new Account("2 20 200", "John M.", "100"))
         );
