@@ -3,6 +3,7 @@ package ru.job4j.stream;
 import org.junit.Test;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.*;
@@ -16,7 +17,7 @@ public class MatrixTest {
                 {10, 20}
         };
         assertThat(
-                new Matrix().convert(matrix), is(Arrays.asList(1, 2, 10, 20))
+                new Matrix().convert(matrix), is(List.of(1, 2, 10, 20))
         );
     }
 }
